--- a/Education-API/appsettings.Development.json
+++ b/Education-API/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "Sqlite": "Data Source=northeducation.db"
+    "Sqlite": "Data Source=northeducation.db",
+    "SqlServer": "Server=(localdb)\\MSSQLlocaldb;Database=NorthEducation;Trusted_Connection=true"
   },
   "Logging": {
     "LogLevel": {
