--- a/Education-API/appsettings.json
+++ b/Education-API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Sqlite": "Data Source=northeducation.db"
+},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
